--- a/apartmani/template/main/apartman_list.html
+++ b/apartmani/template/main/apartman_list.html
@@ -24,7 +24,7 @@
         </h4>
         <p>Adresa: {{ apartman.adresa }}</p>
         <p>Cijena noćenja: {{ apartman.cijena_noci }}</p>
-        <p>Maksimalan broj gostiju: {{ apartman.max_gost}}</p>
+        <p>Maksimalan broj gostiju: {{ apartman.max_gosti}}</p>
         <p>Minimalan broj noćenja: {{ apartman.min_br_nocenja}}</p>
     </div>
 {% endfor %}
