Added profile page

--- a/apartmani/template/base_generic.html
+++ b/apartmani/template/base_generic.html
@@ -8,8 +8,6 @@
     {% load static %}
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 <body style="min-height: 100vh;">
     {% if messages %}
         {% for message in messages %}
@@ -49,11 +47,11 @@
             </button>
             <div class="dropdown-menu">
               {% if user.is_authenticated %}
-              <a class="dropdown-item" href="#">Profile</a>
-              <a class="dropdown-item" href="/logout">Sign Out</a>
+              <a class="dropdown-item" href="/profile">Profile</a>
+              <a class="dropdown-item" href="accounts/logout">Sign Out</a>
               {% else %}
-              <a class="dropdown-item" href="/login">Login</a>
-              <a class="dropdown-item" href="/register">Register</a>
+              <a class="dropdown-item" href="accounts/login">Login</a>
+              <a class="dropdown-item" href="accounts/register">Register</a>
               {% endif %}
             </div>
         </div>
